<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    tools:context=".DetailMotor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/tv_item_image"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:layout_marginVertical="30dp"
            style="@style/CardView"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:padding="20dp"
            android:scaleType="fitXY" />


        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:maxLines="1"
            android:text="@string/motor_name"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/price"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/stock"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_item_detail"
            style="@style/CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:maxLines="4"
            android:text="@string/detail"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_set_favorite"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="302dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/favorite"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_set_share"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="302dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/share"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/buy" />
    </LinearLayout>
</ScrollView>